Add "euro" symbol to prices

--- a/SI-HelloWorld/projet/code/templates/flight_details.ejs
+++ b/SI-HelloWorld/projet/code/templates/flight_details.ejs
@@ -24,7 +24,7 @@
                     <%= flight.company %>
                 </p>
                 <p class="card-text"><b>Prix : </b>
-                    <%= flight.price %>
+                    <%= flight.price %>€
                 </p>
                 <p class="card-text"><i>Encore
         <%= flight.nb_seats %> places disponibles !</i>
