--- a/SI-HelloWorld/projet/code/templates/flight_list.ejs
+++ b/SI-HelloWorld/projet/code/templates/flight_list.ejs
@@ -27,7 +27,7 @@
                             <%= flights[i].company %>
                         </p>
                         <p class="card-text"><b>Prix : </b>
-                            <%= flights[i].price %>
+                            <%= flights[i].price %>€
                         </p>
                         <p class="card-text"><i>Encore
                     <%= flights[i].nb_seats %> places disponibles !</i>
