--- a/SI-HelloWorld/projet/code/templates/flight_details.ejs
+++ b/SI-HelloWorld/projet/code/templates/flight_details.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Liste des vols disponibles</title>
+    <title>Détails du vol</title>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
 </head>
