--- a/ia1-WestCoast/projet/code/Css/style.css
+++ b/ia1-WestCoast/projet/code/Css/style.css
@@ -9,36 +9,114 @@ body{
 	background: #ffffff;
 }
 
+/********** On organise l'en-tête et le corps de la page en flexbox **********/
+.wrapperR{
+	margin:  0 1vw ;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: flex-start;
+}
+/*****************************************************************************/
+
 /********************** Mise en forme des billets ****************************/
 #section_billets{
 	padding: 30px;
-	text-align: center;
 	align-items: center;
 }
 
 #billets{
-	padding-left: 10px;
-	padding-right: 10px;
+	margin: 5px;
 	text-align: center;
-	border:1.5px solid black;
+	border:3px solid #29ABDF;
 	border-radius: 10px;
-	display: inline-block;
+
+	display: flex;
+	flex-flow: row;
+	flex-wrap : wrap;
+	justify-content: center;
+	align-items: center;
 }
 
 .billet{
-	padding-top: 5px;
-	margin-top: 5px;
+
+	margin :2vh 2vw;
+	padding: 10px;
+	min-width: 5vw;
+	min-height: 10vh;
+
+	font-family: arial;
+	font-size: 18px;
+	font-weight:bold;
+	color: #29ABDF !important;
+	text-transform: uppercase;
+	text-decoration: none;
+	text-align: center;
+
+	border:1.5px solid black;
+	border-radius: 10px;
+}
+
+/*****************************************************************************/
+
+/****************** On organise les items du header **************************/
+header{
+
+	align-items: center;
+	background: #ffffff;
+}
+/*****************************************************************************/
+
+/**************** On met en forme les deux parties du header *****************/
+#headerRight{
+	
+	flex: 1;
+	color: #29ABDF;
+	font-size: 32px;
+	text-align: left;
+}
+#headerLeft{
+	flex: 	1;
+	margin-left: 35px;
+	margin-right: 35px;
+	max-width: 	60px;
+	max-height:60px;
+}
+/*****************************************************************************/
+
+/***************** On met en forme le bouton de recherche ********************/
+.example_c {
+margin-right: 20px;
+font-size: 18px;
+font-weight:bold;
+color: #29ABDF !important;
+text-transform: uppercase;
+text-decoration: none;
+background: #ffffff;
+padding: 7px;
+border: 3px solid #29ABDF; !important;
+border-radius: 6px;
+display: inline-block;
+transition: all 0.4s ease 0s;
+}
+.example_c:hover {
+cursor: pointer;
+color: #ffffff !important;
+background: #29ABDF;
+border-color: #29ABDF; !important;
+transition: all 0.4s ease 0s;
+}
+
+#mess{
+	margin-top: 10%;
 	text-align: center;
 }
 
-#billets div{
-	border-top:1.5px solid black;
-}
-
-#billets div:first-child{
-	border:none;
-}
-#billets div:last-child{
-	padding-bottom: 10px;
+#mess2{
+	width: 	100%;
+	position: absolute;
+	visibility:	hidden;
+	padding-top: 30%;
+	text-align: center;
 }
 /*****************************************************************************/
