--- a/ia1-WestCoast/projet/code/Css/style.css
+++ b/ia1-WestCoast/projet/code/Css/style.css
@@ -40,7 +40,7 @@ body{
 
 .billet{
 
-	margin :2vh 2vw;
+	margin :1.5vh 1.5vw;
 	padding: 10px;
 	min-width: 5vw;
 	min-height: 10vh;
@@ -55,7 +55,18 @@ body{
 
 	border:1.5px solid black;
 	border-radius: 10px;
+	box-shadow: 5px 5px 5px rgba(55, 59, 71, 0.95);
+
 }
+
+.billet:hover{
+	font-family: arial;
+	font-size: 18px;
+	font-weight:bold;
+	cursor: pointer;
+	box-shadow: -4px -4px 4px rgba(55, 59, 71, 0.95);
+}
+
 
 /*****************************************************************************/
 
