--- a/ia1-WestCoast/projet/code/Css/style.css
+++ b/ia1-WestCoast/projet/code/Css/style.css
@@ -114,7 +114,7 @@ transition: all 0.4s ease 0s;
 cursor: pointer;
 color: #ffffff !important;
 background: #29ABDF;
-border-color: #29ABDF; !important;
+border-color: #29ABDF !important;
 transition: all 0.4s ease 0s;
 }
 
@@ -138,4 +138,8 @@ transition: all 0.4s ease 0s;
 
 .button_rev{
 	display: none;
+}
+.grey{
+	background-color: #29ABDF;
+	color: white !important;
 }
