--- a/SI-HexClan/projet/frontend/src/components/Root/style.scss
+++ b/SI-HexClan/projet/frontend/src/components/Root/style.scss
@@ -1,2 +1,4 @@
-@import 'node_modules/bootstrap/scss/bootstrap.scss';
-@import 'node_modules/bootstrap-vue/src/index.scss';
+#navbar {
+    text-align: center;
+    width: 100%;
+}
