--- a/SI-HexClan/projet/frontend/src/components/Root/template.pug
+++ b/SI-HexClan/projet/frontend/src/components/Root/template.pug
@@ -1,6 +1,6 @@
 b-container(fluid)#root
     .row
-        .col
+        .col.p-0
             b-navbar(type = "dark" variant = "dark")#navbar
                 b-navbar-brand HexClan
                 //- router-link(to="/")
