--- a/SI-HexClan/projet/frontend/src/components/Login/template.pug
+++ b/SI-HexClan/projet/frontend/src/components/Login/template.pug
@@ -1,13 +1,12 @@
-.login
-    b-form(submit="onSubmit" reset="onReset" v-if="show")
-        b-form-group(id="input-group-2" label="Your Name:" label-for="input-2")
-            b-form-input(id="input-2" v-model="form.name" required placeholder="Enter name")
-        b-form-group(id="input-group-3" label="Password:" label-for="input-3" description="We'll never share your email with anyone else.")
-            b-form-input(id="input-3" v-model="form.password" type="password" required placeholder="Enter password")   
-        b-form-checkbox(class="mb-2 mr-sm-2 mb-sm-0") Remember me
-        b-button(type="submit" variant="primary") Sign In
-        b-button(type="reset" variant="danger") Reset
-        
-
-//- .login
-//-     h1 Login
+.container.text-center
+    .form_login()
+        b-card.mb-2.card_login
+            .col-4.offset-4
+                h2 Login
+                b-form(@submit="onSubmit" @onreset="onReset")
+                    b-form-group(label="Login : " label-for="input-1" id="input-group-1")
+                        b-form-input(id="input-1" v-model="form.login" type="text")
+                    b-form-group(label="Password : " label-for="input-2" id="input-group-2")
+                        b-form-input(id="input-2" v-model="form.password" type="password")
+                    b-button(type="submit" variant="success").buttons.rounded-pill Submit
+                    b-button(type="reset" variant="secondary").buttons.rounded-pill Reset
