--- a/IA2-GigaPanda/projet/code/views/layouts/layout.hbs
+++ b/IA2-GigaPanda/projet/code/views/layouts/layout.hbs
@@ -4,13 +4,10 @@
         <title>{{title}}</title>
     </head>
     <body>
-        <script src="/js/jquery.min.js"></script>
-        <script src="/js/jquery-migrate-3.0.1.min.js"></script>
-
-        <!--{{> header}}
-        {{{body}}}
-        {{> footer}}-->
-
-        <!-- mega Scripts goes here-->
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+            {{> header}}
+            {{{body}}}
+            {{> footer}}
+        <script src="/js/main.js"></script>
     </body>
 </html>
