--- a/SI-HexClan/projet/frontend/src/components/Register/style.scss
+++ b/SI-HexClan/projet/frontend/src/components/Register/style.scss
@@ -1,2 +1,10 @@
-@import 'node_modules/bootstrap/scss/bootstrap.scss';
-@import 'node_modules/bootstrap-vue/src/index.scss';
+@import "node_modules/bootstrap/scss/bootstrap.scss";
+@import "node_modules/bootstrap-vue/src/index.scss";
+
+#b-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    min-height: 100vh;
+}
