add signin and airport views

--- a/IA2-GigaPanda/projet/code/views/airport/index.hbs
+++ b/IA2-GigaPanda/projet/code/views/airport/index.hbs
@@ -2,3 +2,32 @@
 
 {{firstname}}
 {{lastname}}
+
+<head>
+    <meta charset="UTF-8">
+    <style type="text/css">
+      body
+      {
+        font-family: Arial, Helvetica, sans-serif;
+      }
+    </style>
+  <title>Airports page</title>
+</head>
+<body>
+
+<h2>Welcome to the airport page, you can choose a flight</h2>
+<br>
+<p>New York - Paris CDG</p>
+ <input type="button" value="Choose this flight">
+<p>Paris CDG - New York</p>
+<input type="button" value="Choose this flight">
+<p>Detroit - Paris CDG</p>
+<input type="button" value="Choose this flight">
+<p>Paris CDG - Detroit</p>
+<input type="button" value="Choose this flight">
+<p>New York - Detroit</p>
+<input type="button" value="Choose this flight">
+<p>Detroit - New York</p>
+<input type="button" value="Choose this flight">
+
+</body>
