--- a/SI-HexClan/projet/frontend/src/components/Root/template.pug
+++ b/SI-HexClan/projet/frontend/src/components/Root/template.pug
@@ -1,13 +1,14 @@
-b-container(fluid)#root
+b-container(fluid)#root.m-0.p-0
     .row
-        .col.p-0
-            b-navbar(type = "dark" variant = "dark")#navbar
-                b-navbar-brand HexClan
-                    router-link(to="/")
-                        b-link(href="/" :class="'link-' + $store.state.theme") Home
-                    router-link(to="/login" v-if="$store.state.notLogged")
-                         b-link(href="/login" :class="'link-' + $store.state.theme") Sign In
-                    router-link(to="/register" v-if="$store.state.notLogged")
-                        b-link(href="/register" :class="'link-' + $store.state.theme") Sign Up
-    .row
+        b-navbar(:type = "$store.state.theme" :variant = "$store.state.theme")#navbar
+            b-navbar-brand 
+                router-link(to="/")
+                    b-link(href="/" :class="'link-' + $store.state.theme") HexClan
+            router-link(to="/login" v-if="$store.state.notLogged")
+                    b-link(href="/login" :class="'link-' + $store.state.theme") Sign In
+            router-link(to="/register" v-if="$store.state.notLogged")
+                b-link(href="/register" :class="'link-' + $store.state.theme") Sign Up
+            b-dropdown(text="Theme" right :variant="$store.state.theme")#theme-selector
+                b-dropdown-item(v-for="theme in themes" @click="updateTheme(theme.value)") {{ theme.name }}
+    .row(:id="'component-viewer-' + $store.state.theme")
         router-view
