--- a/SI-HexClan/projet/frontend/src/components/Root/style.scss
+++ b/SI-HexClan/projet/frontend/src/components/Root/style.scss
@@ -40,10 +40,23 @@
 
 [id^="component-viewer"] {
     text-align: center;
-    width: 100%;
+    display: flex;
+    flex-flow: column;
     height: 100%;
+    // width: 100%;
+    // height: 100%;
 }
 
 #component-viewer-dark {
     background-color: #263238;
+}
+
+#content {
+    height: 100%;
+}
+
+#root {
+    display: flex;
+    flex-flow: column;
+    height: 100%;
 }
