--- a/SI-HexClan/projet/frontend/src/components/Root/template.pug
+++ b/SI-HexClan/projet/frontend/src/components/Root/template.pug
@@ -1,5 +1,5 @@
 b-container(fluid)#root.m-0.p-0
-    .row
+    .row.m-0.p-0
         b-navbar(:type = "$store.state.theme" :variant = "$store.state.theme")#navbar
             b-navbar-brand 
                 router-link(to="/")
@@ -9,6 +9,6 @@ b-container(fluid)#root.m-0.p-0
             router-link(to="/register" v-if="$store.state.notLogged")
                 b-link(href="/register" :class="'link-' + $store.state.theme") Sign Up
             b-dropdown(text="Theme" right :variant="$store.state.theme")#theme-selector
-                b-dropdown-item(v-for="theme in themes" @click="updateTheme(theme.value)") {{ theme.name }}
-    .row(:id="'component-viewer-' + $store.state.theme")
-        router-view
+                b-dropdown-item(v-for="theme in themes" :key="theme.name" @click="updateTheme(theme.value)") {{ theme.name }}
+    .row(:id="'component-viewer-' + $store.state.theme").m-0.p-0
+        router-view#content
