--- a/SI-HexClan/projet/frontend/src/components/Home/template.pug
+++ b/SI-HexClan/projet/frontend/src/components/Home/template.pug
@@ -1,7 +1,8 @@
 b-container
-    b-row.mt-5
-        b-card-group(deck v-for="index in flights.length % 4")
-            b-card(bg-variant="primary" text-variant="white" :header="flight.code" :class="'flights-' + $store.state.theme" v-for="(flight,index) in flights" :key="flight.id").text-center
+    b-row(v-for="line in Math.ceil(flights.length / 5)" :key="line").mt-5
+        b-card-group(deck)
+            b-card(bg-variant="primary" text-variant="white" :header="flight.code" :class="'flights-' + $store.state.theme" v-for="(flight,index) in flights.slice(line-1,line+4)" :key="flight.id").text-center
+                b-card-text ID = {{ flight.id }}
                 b-card-text Departure: {{ flight.departureAirport.name }} {{ flight.departureAirport.code }}
                 b-card-text Arrival: {{ flight.arrivalAirport.name }} {{ flight.arrivalAirport.code }}
                 b-card-text Departure date: {{ flight.dateDeparture }}
