set default theme to dark and disable spacing in Home scss file for flights class

--- a/SI-HexClan/projet/frontend/src/components/Home/style.scss
+++ b/SI-HexClan/projet/frontend/src/components/Home/style.scss
@@ -2,9 +2,9 @@
     margin-top: 5%;
 }
 
-.flights-dark {
-    width: 90vw;
-    // display: ;
+// .flights-dark {
+//     width: 90vw;
+//     // display: ;
 
-    // height: 10vh;
-}
+//     // height: 10vh;
+// }
