--- a/SI-HexClan/projet/frontend/src/components/Home/template.pug
+++ b/SI-HexClan/projet/frontend/src/components/Home/template.pug
@@ -1,7 +1,7 @@
-b-container#deck
-    b-row(v-for="line in Math.ceil(flights.length / 5)" :key="line").mt-5
+b-container#deck.mt-5
+    b-row(v-for="line in Math.ceil(flights.length / 4)" :key="line").mb-5
         b-card-group(deck)
-            b-card(bg-variant="primary" text-variant="white" :header="flight.code" :class="'flights-' + $store.state.theme" v-for="(flight,index) in flights.slice((line-1)*5,((line-1)*5)+5)" :key="flight.id").text-center
+            b-card(bg-variant="primary" text-variant="white" :header="flight.code" :class="'flights-' + $store.state.theme" v-for="(flight,index) in flights.slice((line-1)*4,((line-1)*4)+4)" :key="flight.id").text-center
                 b-card-text ID = {{ flight.id }}
                 b-card-text Departure: {{ flight.departureAirport.name }} {{ flight.departureAirport.code }}
                 b-card-text Arrival: {{ flight.arrivalAirport.name }} {{ flight.arrivalAirport.code }}
