change navbar style et server port

--- a/SI-HexClan/projet/frontend/src/components/Root/style.scss
+++ b/SI-HexClan/projet/frontend/src/components/Root/style.scss
@@ -21,9 +21,12 @@
         color: #f4f4f4;
     }
 
-    #theme-selector {
-        margin-left: 50vw;
-    }
+    // #theme-selector {
+    //     margin-left: 50vw;
+    // }
+    // .nav-right  {
+    //     margin-left: 25vw;
+    // }
 }
 
 [id^="component-viewer"] {
