--- a/SI-HexClan/projet/frontend/src/components/Root/template.pug
+++ b/SI-HexClan/projet/frontend/src/components/Root/template.pug
@@ -4,11 +4,15 @@ b-container(fluid)#root.m-0.p-0
             b-navbar-brand 
                 router-link(to="/")
                     b-link(href="/" :class="'link-' + $store.state.theme") HexClan
-            router-link(to="/login" v-if="$store.state.notLogged")
-                    b-link(href="/login" :class="'link-' + $store.state.theme") Sign In
-            router-link(to="/register" v-if="$store.state.notLogged")
-                b-link(href="/register" :class="'link-' + $store.state.theme") Sign Up
-            b-dropdown(text="Theme" right :variant="$store.state.theme")#theme-selector
-                b-dropdown-item(v-for="theme in themes" :key="theme.name" @click="updateTheme(theme.value)") {{ theme.name }}
+            .col-2.offset-md-4.offset-sm-3.offset-lg-6.col-md-1
+                b-dropdown(text="Theme" right :variant="$store.state.theme")#theme-selector
+                    b-dropdown-item(v-for="theme in themes" :key="theme.name" @click="updateTheme(theme.value)") {{ theme.name }}
+            .col-4.col-lg-3.col-md-3.offset-lg-1.offset-sm-2
+                router-link(to="/login" v-if="$store.state.notLogged")
+                        b-link(href="/login" :class="'link-' + $store.state.theme").nav-right Sign In
+                router-link(to="/register" v-if="$store.state.notLogged")
+                    b-link(href="/register" :class="'link-' + $store.state.theme") Sign Up
+            
+
     .row(:id="'component-viewer-' + $store.state.theme").m-0.p-0
         router-view#content
