--- a/IA2-GigaPanda/projet/code/views/users/signin.hbs
+++ b/IA2-GigaPanda/projet/code/views/users/signin.hbs
@@ -2,8 +2,7 @@
 {{username}}
 {{password}}
 
-<href='https://fonts.googleapis.com/css?family=Open+Sans:700,600' ></href>
-<form name="Login" action="airport/index.hbs" method="get">
+<form name="Login" action="users/account.hbs" method="get">
  <style type="text/css">
       body
       {
