Fix Post requests and Logger

--- a/IA2-GigaPanda/projet/code/views/users/signin.hbs
+++ b/IA2-GigaPanda/projet/code/views/users/signin.hbs
@@ -1,8 +1,7 @@
 
-{{username}}
-{{password}}
 
-<form name="Login" action="users/account.hbs" method="get">
+<form id="Loginform" action="/user/signin" method="post" novalidate>
+
  <style type="text/css">
       body
       {
