--- a/iad1-FEAT_PARIS_LAVAL/projet/front/main.css
+++ b/iad1-FEAT_PARIS_LAVAL/projet/front/main.css
@@ -1,21 +1,21 @@
-.bg{
-	background-image: url("background.jpg");
-	height: 100%;
-	background-position: center;
-  	background-size: cover;
-  	background-attachment: fixed;
+.bg {
+  background-image: url("background.jpg");
+  height: 100%;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
-.main-form{
-	width: 450px;
-	margin: auto;
-	margin-top: 80px;
+.main-form {
+  width: 450px;
+  margin: auto;
+  margin-top: 80px;
 }
 
-.button-form{
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
+.button-form {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .block {
@@ -23,7 +23,7 @@
   height: 200px;
   width: 50%;
   border: none;
-  background-color: #7A7A7A;
+  background-color: #7a7a7a;
   padding: 14px 28px;
   font-size: 40px;
   cursor: pointer;
