--- a/IA2-GigaPanda/projet/code/views/users/signin.hbs
+++ b/IA2-GigaPanda/projet/code/views/users/signin.hbs
@@ -1,1 +1,17 @@
 <h1>/user/signin</h1>
+
+<form action="/user/signin" method="post" id="form-signin">
+  <div>
+    <label for="firstname">Enter first name: </label>
+    <input type="text" name="firstname" id="firstname" required>
+  </div>
+  <div>
+    <label for="lastname">Enter last name: </label>
+    <input type="text" name="lastname" id="lastname" required>
+  </div>
+  <div>
+    <input type="submit" id="submit-signin" value="Sign in!">
+  </div>
+</form>
+
+
