--- a/IA2-GigaPanda/projet/code/views/users/signin.hbs
+++ b/IA2-GigaPanda/projet/code/views/users/signin.hbs
@@ -1,91 +1,87 @@
-
-
-<form id="Loginform" action="/user/signin" method="post" novalidate>
-
- <style type="text/css">
-      body
-      {
-          font-family: 'Open Sans', sans-serif;
-    background: #a8e1f8 ;
-    margin: 0 auto 0 auto;  
-    width:100%; 
-    text-align:center;
-    margin: 20px 0px 20px 0px;   
-      }
-       p{
-    font-size:12px;
-    text-decoration: none;
-    color:#ffffff;
-    }
-     h1{
-    font-size:1.5em;
-    color:#525252;
-    }
-    .box{
-    background:white;
-    width:300px;
-    border-radius:6px;
-    margin: 0 auto 0 auto;
-    padding:0px 0px 70px 0px;
-    border: #a8e1f8  4px solid; 
-    align-self: center;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    padding: 10px;
-    }
-    .username{
-    background:#ecf0f1;
-    border: #ccc 1px solid;
-    border-bottom: #ccc 2px solid;
-    padding: 8px;
-    width:250px;
-    color:#AAAAAA;
-    margin-top:10px;
-    font-size:1em;
-    border-radius:4px;
-  }
-  
-  .password{
-    border-radius:4px;
-    background:#ecf0f1;
-    border: #ccc 1px solid;
-    padding: 8px;
-    width:250px;
-    font-size:1em;
-  }
-   .btn{
-    background: #3498db ;
-    width:125px;
-    padding-top:5px;
-    padding-bottom:5px;
-    color:white;
-    border-radius:4px;
-    border: #3498db  1px solid;
+<form id="Loginform" method="post" action="/user/signin" novalidate>
+    <meta charset="UTF-8">
     
-    margin-top:20px;
-    margin-bottom:20px;
-    float:left;
-    margin-left: 80px;
-    margin-right: 50px;    
-    font-weight:800;
-    font-size:0.8em;
-  }
-   .btn:hover{
-    background: #3498db ; 
-  }
-  
-  </style>
-<div class="box">
-<h1>Login</h1>
-<input type="username" name="username" value="" placeholder="Username"  class="username" />
-<input type="password" name="password" value="" placeholder="Password"  class="password" />
-<input type="submit" value="Sign in" class="btn"/>
-</div>
-  
+    <style type="text/css">
+        body
+        {
+            font-family: 'Open Sans', sans-serif;
+            background: #a8e1f8 ;
+            margin: 0 auto 0 auto;  
+            width:100%; 
+            text-align:center;
+            margin: 20px 0px 20px 0px;   
+        }
+        p{
+            font-size:12px;
+            text-decoration: none;
+            color:#ffffff;
+        }
+        h1{
+            font-size:1.5em;
+            color:#525252;
+        }
+        .box{
+            background:white;
+            width:300px;
+            border-radius:6px;
+            margin: 0 auto 0 auto;
+            padding:0px 0px 70px 0px;
+            border: #a8e1f8  4px solid; 
+            align-self: center;
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            padding: 10px;
+        }
+        .username{
+            background:#ecf0f1;
+            border: #ccc 1px solid;
+            border-bottom: #ccc 2px solid;
+            padding: 8px;
+            width:250px;
+            color:#AAAAAA;
+            margin-top:10px;
+            font-size:1em;
+            border-radius:4px;
+        }
+        .password{
+            border-radius:4px;
+            background:#ecf0f1;
+            border: #ccc 1px solid;
+            padding: 8px;
+            width:250px;
+            font-size:1em;
+        }
+        .btn{
+            background: #3498db ;
+            width:125px;
+            padding-top:5px;
+            padding-bottom:5px;
+            color:white;
+            border-radius:4px;
+            border: #3498db  1px solid;
+            margin-top:20px;
+            margin-bottom:20px;
+            float:left;
+            margin-left: 80px;
+            margin-right: 50px;    
+            font-weight:800;
+            font-size:0.8em;
+        }
+        .btn:hover{
+            background: #3498db ; 
+        } 
+    </style>
+
+    <div class="box">
+        <h1>Login</h1>
+        <input id='firstname' type="text" name="firstname" placeholder="Enter Firstname"  class="username" required/>
+        <input id='lastname' type="text" name="lastname" placeholder="Enter Lastname"  class="username"required/>
+        <input id="submit-signin" type="submit" value="Sign in" class="btn"/>
+    </div>
 </form>
-  
+
 <!--<head>
     <meta charset="UTF-8">
     <style type="text/css">
