--- a/IA2-GigaPanda/projet/code/views/users/billet.hbs
+++ b/IA2-GigaPanda/projet/code/views/users/billet.hbs
@@ -1,6 +1,8 @@
-<h1>{{title}}</h1>
+<h1>Billet réservé ! 🐼</h1>
 <p>{{firstname}}</p>
 <p>{{lastname}}</p>
 <p>{{departure}}</p>
 <p>{{destination}}</p>
 <p>{{code}}</p>
+
+<a href="/airport/{{firstname}}&{{lastname}}">Confirm 🐼</a>
