--- a/IA2-GigaPanda/projet/code/views/layouts/layout.hbs
+++ b/IA2-GigaPanda/projet/code/views/layouts/layout.hbs
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>{{title}}</title>
+        <link rel="icon" type="image/png" href="/images/favicon.ico">
     </head>
     <body>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
